佐々木は女好きという文言を追加しました。

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
 <div class="neriko">
     <h1>佐々木はモテないキモオタ</h1>
+    <h2>佐々木は女好き</h2>
     <h4>ねりこは酒好き</h4>
     <h5>滋賀県</h5>
+
 
 </div>
 <script src="main.js"></script>
