--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="test">
 
-<h1>テスト</h1>
+<h1>金は人を変える</h1>
 <h3>ねりこ</h3>
 <h5>酒浸り</h5>
 </div>
@@ -20,7 +20,7 @@
     <h2>佐々木は女好き</h2>
     <h4>ねりこは酒好き</h4>
     <h5>滋賀県</h5>
-    <p>金は人を変える</p>
+    <h1 style="color">金は人を変える</h1>
 
 
 </div>
