--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
+<style>
+    h1:hover{
+        color:purple !important;
+    }
+</style>
+    
 </head>
 <body>
 <div class="test">
@@ -20,7 +26,7 @@
     <h2>佐々木は女好き</h2>
     <h4>ねりこは酒好き</h4>
     <h5>滋賀県</h5>
-    <h1 style="color">金は人を変える</h1>
+    <h1>金は人を変える</h1>
 
 
 </div>
