--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </div>
 
 <div class="neriko">
-    <h1>佐々木はモテないキモオタ</h1>
-    <h2>佐々木は女好き</h2>
+    <h1>鈴木はモテないキモオタ</h1>
+    <h2>鈴木は女好き</h2>
     <h4>ねりこは酒好き</h4>
     <h5>滋賀県</h5>
     <h1>金は人を変える</h1>
